service worker: Make the request for the main script go through throttles.

This enables the variations header to be added to the request, and other
modifications by the embedder. Basically it looks like any network
request should go through throttles.

Bug: 923247
Change-Id: I7cb2d3a7edfff866487814884e0b44f4000dbca5
Reviewed-on: https://chromium-review.googlesource.com/c/1424098
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Josh Karlin <jkarlin@chromium.org>
Reviewed-by: Hiroki Nakagawa <nhiroki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#625102}
Former-commit-id: 9a77d962af13ae81f265cf6721c447554f6a7fff